[package]
name = "ByteWatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }              # 工具库
tokio-serial = "5.4.1"
futures = "0.3"
hex = "*"
memchr = "2.7"
crc16 = "*"
image = { version = "0.25", features = ["jpeg", "png"] }
egui = "0.31"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default", "image"] }
egui_plot = "0.31"
winapi = "0.3"
lazy_static = "1.5.0"
